# ytrace

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/examples/: Makefile  cmake_install.cmake  ytrace_basic  ytrace_complex  ytrace_custom_handler  ytrace_socket_control
cmake-build/src/ytrace/: Makefile  cmake_install.cmake  ytrace-ctl
examples/: CMakeLists.txt  basic.cpp  custom_handler.cpp  socket_control.cpp  timers.cpp
examples/complex/: data_processor.cpp  data_processor.hpp  main.cpp  math_ops.cpp  math_ops.hpp  network_sim.cpp  network_sim.hpp
include/ytrace/: ytrace.hpp
src/: CMakeLists.txt
src/ytrace/: CMakeLists.txt  ytrace-ctl.cpp
tests/: CMakeLists.txt  integration_test.sh  test_ytrace.cpp
